force-app/main/default/objects/EquipmentRequestLineItem__c/EquipmentRequestLineItem__c.object-meta.xml
<CustomObject>
    <label>장비대여 상세</label>
    <nameField>
        <label>Equipment Request Line Item Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>