force-app/main/default/objects/EquipmentRequestLineItem__c/fields/AvailableQuantity__c.field-meta.xml
<CustomField>
    <fullName>AvailableQuantity__c</fullName>
    <label>Available Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>