force-app/main/default/objects/EquipmentRequestLineItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Line Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>