force-app/main/default/objects/EquipmentRequestLineItem__c/fields/EquipmentId__c.field-meta.xml
<CustomField>
    <fullName>EquipmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment ID</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Equipment Request Line Item</relationshipLabel>
    <relationshipName>Equipment_Request_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>