force-app/main/default/objects/EquipmentRequestLineItem__c/fields/RequestLineItemNumber__c.field-meta.xml
<CustomField>
    <fullName>RequestLineItemNumber__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Request Line Item Number</label>
    <type>AutoNumber</type>
</CustomField>