force-app/main/default/objects/EquipmentRequestLineItem__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>